<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blue Plaques London</string>
    <string name="action_about">About</string>
    <string name="title_map">Map</string>
    <string name="title_about">About</string>
    <string name="multiple_placemarks">Multiple Placemarks at this location</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for a Blue Plaque</string>
    <string name="developed_details">Developer Details</string>
    <string name="developed_by">Developed by Sean O\' Shea</string>
    <string name="designer_details">Designer Details</string>
    <string name="designed_by">Application designed by Andy Dale</string>
    <string name="map_details">Map Data Details</string>
    <string name="map_data">Map Data for this application is maintained by Roy Reed</string>
    <string name="street_view">Street View</string>
    <string name="wikipedia_article">Wikipedia Article</string>
    <string name="directions">Directions</string>
    <string name="multiple_placemarks">Multiple Placemarks at this location</string>
    <string name="multiple_placemarks_select_one">Select one</string>
    <string name="cancel">Cancel</string>
    <string name="wikipedia_url">http://en.wikipedia.org/wiki/%1$s</string>
    <string name="app_required">App Required</string>
    <string name="install_google_maps">You need to install Google Maps to view Street View</string>
    <string name="ok">OK</string>
    <string name="closest">Find the Plaque closest to me</string>

</resources>
