<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_about"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fragment_about_developed_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_details" />

    <TextView
        android:id="@+id/fragment_about_developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by" />

    <TextView
        android:id="@+id/fragment_about_designer_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer_details" />

    <TextView
        android:id="@+id/fragment_about_designed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designed_by" />

    <TextView
        android:id="@+id/fragment_about_map_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_details" />

    <TextView
        android:id="@+id/fragment_about_map_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_data" />

</LinearLayout>