<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_map_details"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/activity_map_details_occupation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_map_details_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_map_details_council_and_year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_map_details_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_map_details_street_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/street_view" />

    <Button
        android:id="@+id/activity_map_details_wikipedia_article"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wikipedia_article" />

    <Button
        android:id="@+id/activity_map_details_directions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/directions" />

    <Button
        android:id="@+id/activity_map_details_more"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiple_placemarks"
        android:visibility="gone" />

</LinearLayout>